--- a/practical.html
+++ b/practical.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1 style="background-color:DodgerBlue;">This is a Heading</h1>
+<h1>This is a Heading</h1>
 <p style="font-size:50px;">This is a paragraph.</p>
   
 </body>
